Fixed passing props from strong checkbox. Also made minor change to reset button spacing and removed it from its own well

--- a/dev/stylesheet.css
+++ b/dev/stylesheet.css
@@ -47,6 +47,10 @@
       display: none;
     }
 
+    #back-btn {
+      margin-bottom: 15px;
+    }
+
     #warning-message {
       color: red;
       font-size: 10;
